--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </style>
 </head>
 <body> 
-  <div class="main">
+  <section class="main">
     <picture>
       <source srcset="images/image-product-desktop.jpg" media="(min-width: 48em)">
       <img src="images/image-product-mobile.jpg" alt="Perfume">
@@ -32,12 +32,12 @@
         <h2 class="price">$149.99</h2>
       <p class="original-price">$169.99</p>
       </div>
-      <button class="cart">
-        <img src="images/icon-cart.svg" alt="Cart icon">
+      <button class="cart" aria-label="Add to cart">
+        <img src="images/icon-cart.svg" alt="Add to Cart Icon">
         Add to Cart
       </button>
     </div>
-  </div>
+  </section>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
